# nml

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  FORK.md  LICENSE  MODULE.bazel  NEXT.md  NVFP4.md  PRODUCT.md  README.md  REFACTOR.md  REPO.bazel  REQUESTS.md  SYSTEM.md  TASKS.md  buildbuddy.yaml
artifacts/gpt-oss-20b-nvfp4/: BUILD.bazel  README.md  artifact-manifest.json  config.json  execution-fixture.json  output-tensors.json  published.json  recipe.json  source-tensors.json  source.json
bazel/: BUILD.bazel  http_deb_archive.bzl  patchelf.bzl  runfiles_layers.bzl  rust.bzl  test_toolchain.bzl
crates/: BUILD.bazel
crates/nml/: BUILD.bazel
crates/nml-checkpoint/: BUILD.bazel
crates/nml-checkpoint/src/: lib.rs
crates/nml-checkpoint/tests/: safetensors_contract.rs
crates/nml-compiler/: BUILD.bazel
crates/nml-compiler/src/: lib.rs
crates/nml-compiler/tests/: compiler_contract.rs
crates/nml-derive/: BUILD.bazel
crates/nml-derive/src/: lib.rs
crates/nml-ir/: BUILD.bazel
crates/nml-ir/src/: attention_backend.rs  attention_sink.rs  device_capabilities.rs  lib.rs  moe_backend.rs  nvfp4_backend.rs  ordinary_attention.rs  paged_attention.rs  paged_cache_update.rs
crates/nml-ir/tests/: ir_contract.rs
crates/nml-kernel-flash-attention/: BUILD.bazel
crates/nml-kernel-flash-attention/include/: nml_flash_attention.h
crates/nml-kernel-flash-attention/src/: adapter.cu  adapter_common.h  adapter_fa3.cu  lib.rs
crates/nml-kernel-flash-attention/tests/: adapter_contract.cc  device_capability_contract.cc
crates/nml-kernel-nvfp4/: BUILD.bazel
crates/nml-kernel-nvfp4/include/: nml_nvfp4.h
crates/nml-kernel-nvfp4/src/: cuda.rs  cuda_adapter.cu  ffi.rs  lib.rs  turing_adapter.cu  x86.rs
crates/nml-kernel-nvfp4/tests/: cpu_contract.rs
crates/nml-kernel-triton/: BUILD.bazel
crates/nml-kernel-triton/src/: lib.rs  moe.rs  nvfp4.rs  paged_attention.rs  paged_cache.rs  specification.rs  unified_attention.rs
crates/nml-kernel-triton/tests/: kernel_contract.rs
crates/nml-mlir/: BUILD.bazel
crates/nml-mlir-sys/: BUILD.bazel
crates/nml-mlir-sys/include/: nml_mlir.h
crates/nml-mlir-sys/src/: support.c  triton.cc
crates/nml-mlir/src/: lib.rs
crates/nml-mlir/tests/: mlir_contract.rs
crates/nml-parameter/: BUILD.bazel
crates/nml-parameter/src/: lib.rs
crates/nml-parameter/tests/: parameter_contract.rs
crates/nml-pjrt/: BUILD.bazel
crates/nml-pjrt-cpu/: BUILD.bazel
crates/nml-pjrt-cpu/src/: lib.rs
crates/nml-pjrt-cpu/tests/: disabled_contract.rs  runtime_contract.rs
crates/nml-pjrt-cuda/: BUILD.bazel
crates/nml-pjrt-cuda/src/: lib.rs
crates/nml-pjrt-cuda/tests/: disabled_contract.rs  package_contract.rs  runtime_contract.rs
crates/nml-pjrt-sys/: BUILD.bazel
crates/nml-pjrt-sys/include/: nml_pjrt.h
crates/nml-pjrt/src/: lib.rs
crates/nml-platform/: BUILD.bazel
crates/nml-platform/src/: lib.rs
crates/nml-platform/tests/: host_contract.rs
crates/nml-runtime/: BUILD.bazel
crates/nml-runtime/src/: lib.rs
crates/nml-runtime/tests/: runtime_structure_contract.rs
crates/nml-sharding/: BUILD.bazel
crates/nml-sharding/src/: lib.rs
crates/nml-sharding/tests/: sharding_contract.rs
crates/nml-tensor/: BUILD.bazel
crates/nml-tensor/src/: lib.rs
crates/nml-tensor/tests/: slice_contract.rs
crates/nml-tokenizer/: BUILD.bazel
crates/nml-tokenizer-sys/: BUILD.bazel
crates/nml-tokenizer-sys/include/: nml_tokenizer.h
crates/nml-tokenizer-sys/src/: bridge.c
crates/nml-tokenizer/src/: lib.rs
crates/nml-tokenizer/tests/: tokenizer_contract.rs
crates/nml-types/: BUILD.bazel
crates/nml-types/src/: lib.rs
crates/nml-types/tests/: types_contract.rs
crates/nml-xla/: BUILD.bazel
crates/nml-xla-sys/: BUILD.bazel
crates/nml-xla-sys/include/: nml_xla.h
crates/nml-xla-sys/src/: compile_options.c
crates/nml-xla/src/: lib.rs
crates/nml-xla/tests/: compile_options_contract.rs
crates/nml/src/: lib.rs
crates/nml/tests/: attention_contract.rs  execution_performance_contract.rs  linear_contract.rs  neural_ops_contract.rs  nvfp4_contract.rs  structural_contract.rs
products/qwen3/: BUILD.bazel
products/qwen3/src/: config.rs  lib.rs  main.rs  model.rs
products/qwen3/tests/: qwen3_bf16_cpu_contract.rs
products/serve/: BUILD.bazel  serve_image_structure_linux_aarch64.yaml  serve_image_structure_linux_x86_64.yaml
products/serve/device-contracts/: BUILD.bazel  image_config.json  image_structure_linux_aarch64.yaml  image_structure_linux_x86_64.yaml  main.rs
products/serve/profiles/: a40-single-stream-control-v1.json
products/serve/src/: engine.rs  gpt_oss.rs  lib.rs  main.rs  qwen3.rs  server.rs
products/serve/src/gpt_oss/: artifact.rs  checkpoint.rs  config.rs  execution.rs  graph.rs  model.rs  protocol.rs
products/serve/src/qwen3/: config.rs  model.rs
products/serve/src/server/: api.rs  cache.rs  contracts.rs  engine.rs  http.rs  metrics.rs  scheduler.rs
products/serve/tests/: gpt_oss_20b_nvfp4_cuda_contract.rs  qwen3_bf16_cpu_contract.rs
tools/: publish-nvfp4-artifact.sh  publish-serve-image.sh
tools/artifact/: BUILD.bazel  materialize.py  materialize_test.py
tools/bindgen/: BUILD.bazel
tools/device-contracts/: BUILD.bazel  device_contract_image_structure_linux_aarch64.yaml  device_contract_image_structure_linux_x86_64.yaml
tools/device-contracts/src/: lib.rs  main.rs
tools/nvfp4/: BUILD.bazel  audit_published.py  convert.py  extract_fixture.py  requirements.txt  run_on_runpod.py  worker.py
tools/runpod/: BUILD.bazel  api.py  controller.py  lease.py  main.py  runpod_test.py
