"""Stable repository entry points.

Internal crates may be reorganized as the implementation grows. Root aliases
give callers and verification commands durable labels without making every
internal package part of NML's public build API.
"""

alias(
    name = "nml",
    actual = "//crates/nml:nml",
    visibility = ["//visibility:public"],
)

alias(
    name = "nml_platform",
    # Spell out the target: the package directory uses filesystem-friendly
    # kebab case while the Rust crate and Bazel target use identifier-safe
    # snake case.
    actual = "//crates/nml-platform:nml_platform",
    visibility = ["//visibility:public"],
)

alias(
    name = "nml_types",
    actual = "//crates/nml-types:nml_types",
    visibility = ["//visibility:public"],
)

alias(
    name = "nml_mlir",
    actual = "//crates/nml-mlir:nml_mlir",
    visibility = ["//visibility:public"],
)

alias(
    name = "nml_ir",
    actual = "//crates/nml-ir:nml_ir",
    visibility = ["//visibility:public"],
)

alias(
    name = "nml_xla",
    actual = "//crates/nml-xla:nml_xla",
    visibility = ["//visibility:public"],
)

alias(
    name = "nml_compiler",
    actual = "//crates/nml-compiler:nml_compiler",
    visibility = ["//visibility:public"],
)

alias(
    name = "nml_pjrt_cpu",
    actual = "//crates/nml-pjrt-cpu:nml_pjrt_cpu",
    visibility = ["//visibility:public"],
)

alias(
    name = "nml_pjrt_cuda",
    actual = "//crates/nml-pjrt-cuda:nml_pjrt_cuda",
    visibility = ["//visibility:public"],
)

_COMMON_CONTRACTS = [
    "//crates/nml-checkpoint:loader_accounting_contract_test",
    "//crates/nml-checkpoint:safetensors_contract_test",
    "//crates/nml-compiler:compiler_contract_test",
    "//crates/nml-ir:ir_contract_test",
    "//crates/nml-kernel-triton:triton_kernel_contract_test",
    "//crates/nml-kernel-nvfp4:nvfp4_cpu_contract_test",
    "//crates/nml-mlir:mlir_contract_test",
    "//crates/nml-parameter:parameter_contract_test",
    "//crates/nml-pjrt-cpu:cpu_runtime_contract_test",
    "//crates/nml-platform:host_contract_test",
    "//crates/nml-runtime:runtime_structure_contract_test",
    "//crates/nml-sharding:sharding_contract_test",
    "//crates/nml-tensor:slice_contract_test",
    "//crates/nml-tokenizer:tokenizer_contract_test",
    "//crates/nml-types:types_contract_test",
    "//crates/nml-xla:compile_options_contract_test",
    "//crates/nml:linear_cpu_contract_test",
    "//crates/nml:attention_cpu_contract_test",
    "//crates/nml:neural_ops_cpu_contract_test",
    "//crates/nml:nvfp4_cpu_contract_test",
    "//crates/nml:execution_performance_cpu_contract_test",
    "//crates/nml:structural_contract_test",
    "//products/serve:serve_contract_test",
    "//tools/device-contracts:device_contract_runner_contract_test",
    "//tools/artifact:materialization_contract_test",
    "//tools/runpod:runpod_contract_test",
]

_CUDA_DEVICE_CONTRACTS = [
    "//crates/nml-kernel-flash-attention:flash_attention_device_capability_contract_test",
    "//crates/nml-pjrt-cuda:cuda_runtime_contract_test",
    "//crates/nml:linear_cuda_contract_test",
    "//crates/nml:attention_cuda_contract_test",
    "//crates/nml:neural_ops_cuda_contract_test",
    "//crates/nml:execution_performance_cuda_contract_test",
    "//crates/nml:nvfp4_cuda_contract_test",
]

_CUDA_PACKAGE_CONTRACTS = [
    "//crates/nml-pjrt-cuda:cuda_package_contract_test",
    "//products/serve/device-contracts:image_structure_test",
    "//tools/device-contracts:device_contract_image_structure_test",
]

_CUDA_REMOTE_CONTRACTS = [
    "//crates/nml-kernel-flash-attention:flash_attention_adapter_contract_test",
]

# Full-checkpoint product acceptance is deliberately opt-in. It requires an
# operator-mounted immutable model volume and executes through the owned device
# runner; it must never be pulled into generic CUDA or repository-wide suites.
_CUDA_PRODUCT_CONTRACTS = [
    "//products/serve:gpt_oss_20b_nvfp4_cuda_contract_test",
    "//products/serve:gpt_oss_20b_nvfp4_cuda_generation_test",
]

# These suites encode where a contract can truthfully execute. They do not
# encode implementation layers: common graph/runtime contracts intentionally
# remain in both backend configurations.
test_suite(
    name = "cpu_contracts",
    tests = _COMMON_CONTRACTS + [
        "//crates/nml-pjrt-cuda:cuda_disabled_contract_test",
    ],
    visibility = ["//visibility:public"],
)

test_suite(
    name = "cuda_remote_contracts",
    tests = _COMMON_CONTRACTS + _CUDA_REMOTE_CONTRACTS,
    visibility = ["//visibility:public"],
)

test_suite(
    name = "cuda_device_contracts",
    tests = _CUDA_DEVICE_CONTRACTS,
    visibility = ["//visibility:public"],
)

test_suite(
    name = "cuda_package_contracts",
    tests = _CUDA_PACKAGE_CONTRACTS,
    visibility = ["//visibility:public"],
)

test_suite(
    name = "cuda_runtime_contracts",
    tests = _CUDA_PACKAGE_CONTRACTS + _CUDA_DEVICE_CONTRACTS,
    visibility = ["//visibility:public"],
)

test_suite(
    name = "cuda_product_contracts",
    tests = _CUDA_PRODUCT_CONTRACTS,
    visibility = ["//visibility:public"],
)

# `filegroup` deliberately propagates exact CUDA executables rather than their
# runfiles. A remote builder can therefore populate every code-generation and
# linker action needed by the NVIDIA host without copying the CUDA runtime into
# the hosted runner. The host assembles the SHA-pinned system-driver runtime
# when it executes `cuda_device_contracts`; distribution integrity remains the
# independent `cuda_package_contracts` gate. Product binaries belong here once
# CUDA compilation is part of their permanent acceptance contract.
filegroup(
    name = "cuda_contract_binaries",
    srcs = [
        "//crates/nml-kernel-flash-attention:flash_attention_device_capability_contract_test",
        "//crates/nml-pjrt-cuda:cuda_runtime_contract_binary",
        "//crates/nml:linear_cuda_contract_binary",
        "//crates/nml:attention_cuda_contract_binary",
        "//crates/nml:neural_ops_cuda_contract_binary",
        "//crates/nml:execution_performance_cuda_contract_binary",
        "//crates/nml:nvfp4_cuda_contract_binary",
        "//products/serve:gpt_oss_20b_nvfp4_cuda_contract_test",
        "//products/serve:gpt_oss_20b_nvfp4_cuda_generation_test",
        "//products/serve:serve",
    ],
    testonly = True,
    visibility = ["//visibility:public"],
)

# The exhaustive suite remains useful on a sufficiently provisioned GPU host.
# Resource-aware development and CI use the three suites above per D-031.
test_suite(
    name = "tests",
    tests = _COMMON_CONTRACTS + _CUDA_REMOTE_CONTRACTS + _CUDA_PACKAGE_CONTRACTS + _CUDA_DEVICE_CONTRACTS + [
        "//crates/nml-pjrt-cpu:cpu_disabled_contract_test",
        "//crates/nml-pjrt-cuda:cuda_disabled_contract_test",
    ],
    visibility = ["//visibility:public"],
)
